[package]
edition = "2021"
name = "rust-dlc-wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = {version = "0.28"}
dlc = {version = "0.1.0", features = ["use-serde"], git = "https://github.com/p2pderivatives/rust-dlc", branch = "fix/serde-serialization"}
dlc-messages = {version = "0.1.0", features = ["use-serde"], git = "https://github.com/p2pderivatives/rust-dlc", branch = "fix/serde-serialization"}
secp256k1-zkp = {version = "0.6.0", features = ["bitcoin_hashes", "global-context"]}
serde = {version = "1.0", default-features = false}
serde-wasm-bindgen = "0.4.3"
typescript-definitions = {git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
wasm-bindgen-test = "0.3.0"

# new material
[lib]
crate-type = ["cdylib", "rlib"]
